fix harmless heading spacing. fix death wording so it will not announce a player defeating themselves. Change the wording for bushido announcement when shogun discards bushido

--- a/src/pages/Game/GamePage.scss
+++ b/src/pages/Game/GamePage.scss
@@ -31,6 +31,11 @@
             margin-left: 1rem;
         }
 
+        &-heading {
+            margin: 0;
+            font-size: 1.25rem;
+        }
+
         &-flex-container {
             display: flex;
             gap: .75rem;
@@ -154,7 +159,7 @@
 
         &--heading {
             position: absolute;
-            transform: translate(3rem, -6rem);
+            transform: translate(1rem, -6rem);
 
         }
 
